--- a/index-optimized.html
+++ b/index-optimized.html
@@ -15,7 +15,7 @@
 	<!-- Reduzir recurso crítico utilizando media queries -->
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script src="//www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.min.js"></script>
   </head>
 
