--- a/index-optimized.html
+++ b/index-optimized.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+	<meta http-equiv="cache-control" content="public" />
+	<meta http-equiv="expires" content="2017-10-21 00:00:01" />
+    <meta name="description" content="Otimização da página de exemplo final do curso de Otimização Web">
+    <meta name="author" content="BrunoBiluca">
     <title>Cameron Pittman: Portfolio</title>
 	
 	<!-- Reduzir recurso crítico utilizando media queries -->
