--- a/index-optimized.html
+++ b/index-optimized.html
@@ -14,6 +14,22 @@
 
     <script async src="js/perfmatters.min.js"></script>
 
+	<style>
+		.hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
+		  border-bottom: 1px solid #ccc;
+		  border-top: 1px solid #ccc;
+		}
+
+		.content { padding: 1em 1em; }
+		.content li { list-style-type: none; font-size: 1.1em;}
+		
+		footer {
+		  padding: 0 0.5em;
+		  border-top: 1px solid #ccc;
+		}
+		footer span { float: right; font-style: italic; }
+	</style>
+		
   </head>
   <body>
     <header>
